--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* Custom Fonts */
+/************ Custom Fonts ************/
 @font-face {
   font-family: Centra;
   src: url('./assets/font/CentraNo2-Bold.ttf');
@@ -15,7 +15,7 @@
   font-weight: 400;
 }
 
-/* Default css */
+/************ Default css ************/
 *{
   margin: 0;
   padding: 0;
@@ -82,7 +82,7 @@ p.danger {
 	color: red;
 }
 
-/* Navbar Css */
+/************ Navbar Css ************/
 
 nav.navbar {
   padding: 18px 0;
@@ -310,6 +310,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   border-right: 0.08em solid #666;
 }
 
+/************ Skills Css ************/
 
 
 .App {
