--- a/src/App.css
+++ b/src/App.css
@@ -376,13 +376,15 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 .skill-slider .item img {
   width: 50%;
+  height: 150px;
   margin: 0 auto 15px auto;
 }
 
 .background-image-left {
   top: 0%;
   position: absolute;
-  bottom: 0;
+  left: 0%;
+  bottom: 0%;
   width: 100%;
   z-index: -4;
 }
